# Legal-AI-App

./: .gitignore  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  README.md  TAURI_SETUP.md  TODO.md  VERSIONING_GUIDE.md  capacitor.config.json  package.json  pnpm-lock.yaml
.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  export-detail.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
.next/server/: app-paths-manifest.json  middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json
.next/server/app/: _not-found.rsc  dashboard.html  dashboard.rsc  due-diligence.html  due-diligence.rsc  generate.html  index.html  index.rsc  page.js  page.js.nft.json  page_client-reference-manifest.js  settings.html  settings.rsc
.next/server/chunks/: 124.js  41.js  485.js  560.js  591.js  712.js  727.js  802.js  859.js  936.js
.next/server/pages/: 404.html  500.html  _app.js  _app.js.nft.json  _document.js  _document.js.nft.json  _error.js  (+1 more)
app/: globals.css  layout.tsx  page.tsx
app/dashboard/: page.tsx
app/due-diligence/: page.tsx
app/generate/: page.tsx
app/settings/: page.tsx
components/: VersionDisplay.tsx  VersionInfo.tsx  adaptive-layout.tsx  apple-signin.tsx  background-agent.tsx  custom-title-bar.tsx  platform-detector.tsx
lib/: version.ts
scripts/: version-sync.js
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/src/: main.rs
(+52 files in other folders)
