[package]
name = "legal-ai-assistant"
version = "1.0.0"
description = "AI-powered legal document assistant"
authors = ["LegalAI Team"]
license = "MIT"
repository = "https://github.com/legalai/assistant"
default-run = "legal-ai-assistant"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [ "os-all", "shell-open", "process-exit", "dialog-all", "fs-all", "process-relaunch", "notification-all", "clipboard-all", "path-all"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
